Add the /api prefix to all URL paths